--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,10 @@
   /* Fonts */
   --main-font: 'Roboto', sans-serif;
   --secondary-font: 'Raleway', sans-serif;
+
+  /* Text colors */
+
+  /* Background colors */
+  
+  /* Button colors */
 }
