--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,18 @@
 }
 
 .page {
-  color: var(--primary-txt-cl);
+  color: var(--primary-txt-cl);  
   background-color: var(--page-bgd-cl);
+}
+
+/* Reset */
+
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
 }
 
 /* Header */
@@ -48,8 +58,8 @@
   color: var(--secondary-txt-cl);
 }
 
-.address-item {
-  color: var(--primary-txt-cl);
+.address-list .link {
+  color: currentColor;
 }
 
 /* Hero */
@@ -67,5 +77,17 @@
   background-color: var(--btn-hero-bgd-cl);
 }
 
+
+
 /* Feature */
+
+.feature-title {
+  display: none;
+}
+
+.feature-subtitle {
+  color: var(--secondary-txt-cl);
+}
+
+/* What are we doing */
 
