--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,16 @@
 
 /* Header */
 
+.header-logo-web,
+.header-logo-studio {
+  font-family: var(--secondary-font);  
+  font-weight: 800;
+  font-size: 18px;
+  line-height: calc(21 / 18);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
 .header-logo-web {
   color: var(--primary-logo-cl);
 }
@@ -64,16 +74,7 @@
   color: var(--secondary-logo-cl);
 }
 
-.header-logo-web,
-.header-logo-studio {
-  font-family: var(--secondary-font);
-  font-weight: 800;
-  font-size: 18px;
-  line-height: calc(21 / 18);
-  letter-spacing: 0.03em;
-}
-
-.nav-link {
+.nav-link {  
   font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
@@ -104,7 +105,7 @@
   background-color: var(--header-bgd-cl);
 }
 
-.hero-title {  
+.hero-title {
   font-size: 56px;
   line-height: calc(60 / 56);
 
@@ -123,7 +124,9 @@
 
   cursor: pointer;
 
-  border: 0px;  
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -190,23 +193,21 @@
   background-color: var(--footer-bgd-cl);
 }
 
-.footer-logo-web {
-  font-family: var(--secondary-font);  
-  font-weight: 800;
-  font-size: 18px;
-  line-height: calc(21 / 18);
-  letter-spacing: 0.03em;
-
-  color: var(--primary-logo-cl);
-}
-
+.footer-logo-web,
 .footer-logo-studio {
   font-family: var(--secondary-font);  
   font-weight: 800;
   font-size: 18px;
   line-height: calc(21 / 18);
   letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
 
+.footer-logo-web {
+  color: var(--primary-logo-cl);
+}
+
+.footer-logo-studio {
   color: var(--footer-studio-cl);
 }
 
@@ -238,7 +239,8 @@
 
   cursor: pointer;
 
-  border: 0px;
+  border: 1px solid #E7E9FC;
+  border-radius: 4px;
 }
 
 .portfolio-btn:hover,
@@ -247,15 +249,15 @@
   background-color: var(--accent-btns-bgd-cl);
 }
 
-
-
-
-
-
-
-
-
-
 .portfolio-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(24 / 20);
+
   color: var(--secondary-txt-cl);
+}
+
+.portfolio-text {  
+  font-size: 16px;
+  line-height: calc(24 / 16);
 }
