--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,8 @@
   line-height: calc(40 / 36);
 
   color: var(--secondary-txt-cl);
+
+  text-align: center;
 }
 
 /* Our team */
@@ -178,7 +180,7 @@
   font-size: 36px;
   line-height: calc(40 / 36);
 
-  color: var(--secondary-txt-cl)
+  color: var(--secondary-txt-cl);
 
   text-align: center;
 }
