--- a/css/styles.css
+++ b/css/styles.css
@@ -145,9 +145,10 @@
   font-size: 36px;
   line-height: calc(40 / 36);
 
-  color: var(--secondary-txt-cl);
-
+  text-transform: capitalize;
   text-align: center;
+
+  color: var(--secondary-txt-cl);  
 }
 
 .feature-subtitle {
@@ -169,9 +170,10 @@
   font-size: 36px;
   line-height: calc(40 / 36);
 
-  color: var(--secondary-txt-cl);
-
+  text-transform: capitalize;
   text-align: center;
+
+  color: var(--secondary-txt-cl);
 }
 
 /* Our team */
@@ -180,9 +182,10 @@
   font-size: 36px;
   line-height: calc(40 / 36);
 
-  color: var(--secondary-txt-cl);
-
+  text-transform: capitalize;
   text-align: center;
+
+  color: var(--secondary-txt-cl);
 }
 
 .team-subtitle {
@@ -235,9 +238,10 @@
   font-size: 36px;
   line-height: calc(40 / 36); 
 
-  color: var(--secondary-txt-cl);
-
+  text-transform: capitalize;
   text-align: center;
+
+  color: var(--secondary-txt-cl);
 }
 
 .portfolio-btn {
