--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@
 
 .header-logo-web,
 .header-logo-studio {
-  font-family: var(--secondary-font);  
+  font-family: 'Raleway', sans-serif;  
   font-weight: 800;
   font-size: 18px;
   line-height: calc(21 / 18);
