--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,10 @@
 
 /* Header */
 
-.header-logo-web,
-.header-logo-studio {
-  font-family: 'Raleway', sans-serif;  
+/* .header-logo-web,
+.header-logo-studio  */
+.header-logo {
+  font-family: var(--secondary-font);  
   font-weight: 800;
   font-size: 18px;
   line-height: calc(21 / 18);
