--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,8 @@
   font-family: var(--secondary-font);  
   font-weight: 800;
   font-size: 18px;
-  line-height: calc(21 / 18);
+  line-height: 1.17; 
+  /* calc(21 / 18); */
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
