--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
+  letter-spacing: 0.02em;  
 
   color: var(--secondary-txt-cl);
 }
@@ -96,6 +97,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: calc(24 / 16);
+  letter-spacing: 0.02em;
 
   color: currentColor;  
 }
