--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,8 @@
 
 .works-title {
   font-size: 36px;
-  line-height: calc(40 / 36);
+  /* line-height: calc(40 / 36); */
+  line-height: 1.11;
   letter-spacing: 0.02em;
 
   text-transform: capitalize;
@@ -186,7 +187,8 @@
 
 .team-title {
   font-size: 36px;
-  line-height: calc(40 / 36);
+  /* line-height: calc(40 / 36); */
+  line-height: 1.11;
   letter-spacing: 0.02em;
 
   text-transform: capitalize;
