--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,8 @@
   font-family: var(--secondary-font);  
   font-weight: 800;
   font-size: 18px;
-  line-height: calc(21 / 18);
+  /* line-height: calc(21 / 18); */
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
