--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@
   color: var(--secondary-logo-cl);
 }
 
-.nav-link {  
+.nav-list .link {  
   font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
