--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@
   color: var(--secondary-logo-cl);
 }
 
-.nav-list .link {  
+.nav-link {  
   font-weight: 500;
   font-size: 16px;
   line-height: calc(24 / 16);
@@ -92,8 +92,7 @@
   font-style: normal;
 }
 
-.mail-link,
-.tel-link {  
+.address-link {  
   font-weight: 400;
   font-size: 16px;
   line-height: calc(24 / 16);
